# Media-Manager

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bump-version.yml  linting-and-tests.yml  new-latest-release.yml  publish-docker-image.yml
alembic/: env.py
alembic/versions/: 3dea3e826fa2_added_monitored_library_ids_to_app_.py  7654f336dff9_inital_migration.py  7a4bf49af6df_added_overseerr_config_params.py  7ba4d91f4124_added_expired_media_ignored_items.py
dev/code-gen/: generate_pydantic_exports.py  generate_ts_types.py  utils.py
docker/: api.Dockerfile  docker-compose.yml  frontend.Caddyfile  frontend.entry.sh
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
mediamanager/: __main__.py  app.py  security.py
mediamanager/clients/: media_managers.py  ombi.py  overseerr.py  tautulli.py
mediamanager/db/: _model_base.py  db_setup.py
mediamanager/mediamanager/: app.py  scheduler.py  security.py
mediamanager/models/: _base.py  email.py  media_managers.py  qbittorrent.py  tautulli.py
mediamanager/routes/: auth.py  expired_media.py  manage_media.py  users.py
mediamanager/services/: app_config.py  data_exporter.py  expired_media.py  factory.py  media_managers.py  ombi.py  overseerr.py  qbittorrent.py  smtp.py  tautulli.py  users.py
mediamanager/settings/: app_settings.py
tests/: conftest.py
tests/fixtures/: __init__.py
tests/utils/: generators.py
(+102 files in other folders)
