[tool.poetry]
name = "MediaManager"
version = "0.1.1"
description = "Media Management Tools"
authors = ["Michael Genson <71845777+michael-genson@users.noreply.github.com>"]
license = "GNU"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.22.0"
fastapi = "^0.97.0"
httpx = "^0.24.1"
pydantic = "^1.10.9"
apprise = "^1.4.0"
pyhumps = "^3.8.0"
jinja2 = "^3.1.2"
rocketry = "^2.5.1"
python-qbittorrent = "^0.4.3"
requests = "^2.31.0"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
aiosmtplib = "^2.0.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.272"
mypy = "^1.3.0"
pre-commit = "^3.3.3"
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
freezegun = "^1.2.2"
bumpversion = "^0.6.0"
types-requests = "^2.31.0.1"
types-passlib = "^1.7.7.12"
types-python-jose = "^3.3.4.7"
pydantic-to-typescript = "^1.0.10"
isort = "^5.12.0"
rich = "^13.4.2"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120

[tool.mypy]
exclude = ['alembic/*']


[tool.ruff]
extend-exclude = ["alembic/*"]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
